# teleinfo

./: .gitignore  Dockerfile  Makefile  README.md  compose.dist.yml  pyproject.toml
src/app/: config.yaml.template  daily_update_graph.sh  data_injector.py  linky.py  prepare.sh  requirements.txt
src/etc/supervisor.d/: cron.ini  http_plot.ini  http_server.ini  linky.ini  prepare.ini
src/html/: plotly_minimal.html
src/linky/: data_injector.py  linky.py  prepare.sh
